<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com|smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）
基于GPLv3和LGPLv3发布

==========更新日志==========


==========5.17==========
2025-2-8
1. TinUIXml下expander、flyout支持直接使用xml布局
2. 优化展示画廊配色，修改部分示例
3. 优化spinbox样式
4. 修复entry、passwordbox提示符颜色错误
5. button2添加过渡响应色
6. 如下控件按钮添加过渡响应色参数：
    button2, menu, menubutton, pipspager, expander,
    picker, barbutton
7. 如下控件背景适配改进贴合性：
    treeview, listbox(并且改为圆角边框), combobox,
    menu, menubutton
8. 修复TinUIXml下ui标签内绑定回调函数异常的错误
9. 修复treeview未选中时折叠和展开的错误
10. 修复togglebutton颜色转换时计算出错问题（防止溢出，对十六进制个位数补位）

==========5.15==========
2025-2-1
1. TinUIXml<line>对齐支持整体对齐，使用lineachor参数控制对齐方式，该值不会向内传递
2. 新增浮出ui控件 flyout
3. listbox允许初始化为0个元素
4. picker底部按钮添加响应颜色
5. label返回值添加back背景元素
6. TinUIXml支持直接使用flyout控件
7. TinUIXml下ui支持直接使用xml布局
8. 优化TinUIXml性能

==========5.13==========
2025-1-8
1. 统一大圆角8px（width=17），小圆角4px（width=9）。包括：
    entry, link, labelframe, combobox, table, spinbox,
    menu, tooltip, listview, notebook, notecard, button2,
    expander, waitframe, treeview, passwordbox, togglebutton,
    picker, menubutton, barbutton
2. 优化spinbox调节按钮外观
3. 调整barbutton，menubar，menubutton外框与内容的间距
4. 修复checkbutton状态切换函数的问题
5. 修复treeview展开选项的问题
7. 修复listview删除元素后的元素列表存储错误以及样式提示符位置错误
8. listview允许初始为0个元素，并修复了删除元素时可能出现的错误

==========5.11==========
2024-12-28
1. 允许额外的LGPLv3许可
2. 修复密码输入框的提示符颜色错误
3. 优化部分控件动画性能
4. 改进pipspager动画
5. windows下进行部分高dpi测试
6. 改进combobox效果

==========5.10==========
2024-11-9
1. 优化滚动条标识符
2. 优化标签页选项卡关闭标识符
3. 调整工具栏按钮默认字体大小
4. 树状图优化图标
5. 优化部分控件创建性能
6. 优化TinUIXml效率

==========5.9==========
2024-10-6
1. 增加extension拓展包，支持按钮化控件
2. radiobox增加funcs返回值
3. TinUITheme（明亮/暗黑）统一背景配色
4. 修复滚动条初始化可能导致的错误

==========5.8==========
2024-8-28
1. button2, barbutton优化有图标无文字的排版
2. listview新增元素获取、删除、增加方法
3. 更新entry样式
4. 更新passwordbox样式
5. barbutton兼容3.6~3.9版本python
6. 更新combobox样式
