@@ -9,7 +9,7 @@ def print__(name):
 
 a=win()
 u=a.u
-_,funcs,_=u.add_listbox((5,5),data=(),command=print__)
+_,_,funcs,_=u.add_listbox((5,5),data=(),command=print__)
 
 u.add_button((5,300),'添加元素',command=additem)
 #u.add_button((120,300),'删除第二个元素'+'\uE755',font='{Segoe MDL2} 12',command=deleteitem)
