@@ -6,6 +6,12 @@
 ==========更新日志==========
 
 
+==========5.18==========
+2025-
+1. 修复列表选择对话框的尺寸错误问题
+2. 超链接、菜单等包含函数类型的多接受类型参数，使用callable判断是否可调用
+3. pivot初始化时不再自动触发选择
+
 ==========5.17==========
 2025-2-8
 1. TinUIXml下expander、flyout支持直接使用xml布局
